# neverlose-loader

./: .gitignore  APPLY_CHANGES_RU.txt  APPLY_JAVA_UPDATE_RU.txt  AUDIT_RU.md  CHANGES_RU.txt  CLEAN_BUILD_RU.txt  CMakeLists.txt  FAST_MANIFEST_UPDATE_RU.txt  FIX_PLAN_RU.txt  GITHUB_SETUP_RU.md  NETWORK_FIX_RU.txt  README.md  WINDOWS_12002_FIX_RU.txt  app.manifest  build-release.bat  resources.rc
.github/workflows/: build-windows.yml
cmake/: PadExecutable.cmake
irc/: irc-config.json
irc-server-cloudflare/: README_RU.md  migration_002_roles.sql  package-lock.json  package.json  schema.sql  wrangler.toml
irc-server-cloudflare/src/: worker.js
manifest/: manifest.example-with-version-selector.json  manifest.example.json
src/: App.cpp  App.h  ArtifactDownloader.cpp  ArtifactDownloader.h  GameInstaller.cpp  GameInstaller.h  JavaRuntimeService.cpp  JavaRuntimeService.h  LauncherCore.cpp  LauncherCore.h  ManifestService.cpp  ManifestService.h  MiniJson.cpp  MiniJson.h  Models.h  ModrinthService.cpp  ModrinthService.h  SettingsService.cpp  SettingsService.h  Utf.h  main.cpp
